2001-05-22  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* README: Update, document available SRFIs.

2001-05-21  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-19.scm, srfi-17.scm, srfi-16.scm, srfi-14.scm, srfi-13.scm,
	srfi-11.scm, srfi-10.scm, srfi-9.scm, srfi-8.scm, srfi-6.scm,
	srfi-2.scm: Use `cond-expand-provide' for providing features to
	`cond-expand'.

2001-05-20  Marius Vollmer  <mvo@zagadka.ping.de>

	* srfi-14.c (scm_c_init_srfi_14): Added "int" to declaration of
	`initialized'.

2001-05-19  Marius Vollmer  <mvo@zagadka.ping.de>

	Avoid using module operations from C.
	
	* srfi-13.c (scm_init_srfi_13_14): Removed.
	* srfi-14.h, srfi-14.c (scm_c_init_srfi_14): New.  Contains
	initializations needed by C clients of srfi-14.
	(scm_init_srfi_13, scm_init_srfi_14): Call it.
	* srfi-13.scm: Call "scm_init_srfi_13" instead of
	"scm_init_srfi_13_14".
	* srfi-14.scm: Call "scm_init_srfi_14" instead of
	"scm_init_srfi_13_14".

2001-05-16  Rob Browning  <rlb@cs.utexas.edu>

	* srfi-19.scm (priv:integer-reader-exact): minor cleanups.

2001-05-14  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* Makefile.am (srfi_DATA): Added srfi-16.scm.

	* srfi-16.scm: New file.

2001-05-10  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-13.c (scm_string_delete): Logic was inversed for charset.
	Fixed.

2001-05-08  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-13.c (scm_string_copyS): Fixed nasty bug.

2001-05-05  Rob Browning  <rlb@cs.utexas.edu>

	* Makefile.am (srfi_DATA): added srfi-19.scm.

	* srfi-19.scm: New file - time/date SRFI.  Thanks to Will
	Fitzgerald.

2001-05-02  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-14.c, srfi-13.c: Added @bullet to various @itemize lists.

	* srfi-10.scm: Typo fix.

2001-05-02  Rob Browning  <rlb@cs.utexas.edu>

	* srfi-11.scm (let-values): fix (a b c . d) case.  Thanks Martin.

2001-05-02  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
