@@ -1,3 +1,8 @@
+2001-05-23  Rob Browning  <rlb@cs.utexas.edu>
+
+	* srfi-19.scm (:optional): renamed to optional to avoid reader
+	keywords conflict.  Thanks to Matthias Koeppe for the report.
+
 2001-05-22  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
 
 	* README: Update, document available SRFIs.
